Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35614

JSON_UNQUOTE doesn't work with emojis

    XMLWordPrintable

Details

    Description

      JSON_UNQUOTE returns "?" when it's called with an emoji
      For example, "😊" is encoded as "\\ud83d
      ude0a"
      :

      SELECT JSON_UNQUOTE('"\\ud83d\\ude0a"');
      ?
      

      I believe this is a bug? JSON_UNQUOTE should return the emoji, not a question mark.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              csirmazbendeguz Bendeguz Csirmaz
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 3h
                  1d 3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.