MDEV-35614: JSON_UNQUOTE doesn't work with emojis

emojis are a 4 byte utf sequence. Fix the conversion in JSON_UNQUOTE
to utf8mb4_bin by default.